--- a/public/about/about.html
+++ b/public/about/about.html
@@ -2,5 +2,5 @@
     <h3 class="margin">You need to wait for this information , the development is still in progress</h3>
 </div>
 <footer class="container-fluid bg-4 text-center">
-    <p>This Site is developed by <a href="mailto:jitender.k.kumar@oracle.com">Jitender Choudhary</a></p>
+    <p>For More details on the Release Timelines you can contact me  <a href="mailto:jitender.k.kumar@oracle.com">Jitender Choudhary</a></p>
 </footer>
