--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <script src="libs/angular-animate/angular-animate.min.js"></script>
     <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
+    <!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>-->
+    <script src="libs/ui-bootstrap-tpls-2.1.4.min.js"></script>
     <!-- ANGULAR CUSTOM -->
     <script src="history/HistCtrl.js"></script>
     <script src="home/MainCtrl.js"></script>
