History Table Column Changes

--- a/public/history/history.html
+++ b/public/history/history.html
@@ -8,18 +8,18 @@
    <div class="tab-content">
         <div id="active" class="tab-pane fade in active" >
             <div class="panel-body">
-                <history-list data="transactionList.running"></history-list>
+                <history-list tab="running" data="transactionList.running"></history-list>
             </div>
         </div>
         <div id="queued" class="tab-pane fade">
             <div class="panel-body">
-               <history-list data="transactionList.queued"></history-list>
+               <history-list tab="queued" data="transactionList.queued"></history-list>
             </div>
 
         </div>
         <div id="archived" class="tab-pane fade" >
             <div class="panel-body">
-                <history-list data="transactionList.archived"></history-list>
+                <history-list tab="archived" data="transactionList.archived"></history-list>
             </div>
         </div>
     </div>
