--- a/public/home/home.html
+++ b/public/home/home.html
@@ -35,18 +35,17 @@
                     <div class="form-group">
                         <label for="transaction-email" class="col-sm-2 col-md-2 control-label">Email </label>
                         <div class="col-sm-10 col-md-10">
-                            <input id="transaction-email" class="form-control" required type="email" ng-model="transaction.email" name="email" placeholder="abc@oracle.com">                     
-                                   
+                            <input id="transaction-email" class="form-control" required type="email" ng-model="transaction.email" name="email" placeholder="abc@oracle.com">
+
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="updatebug" class="col-sm-2 col-md-2 control-label">Update Bug </label>
-
                         <div class="col-md-7 col-sm-7 col-lg-7" id="updatebug">
                             <div class="input-group">
-                                <div class="btn-group" id="updatebug">
-                                    <label class="btn btn-primary " ng-model="transaction.updateBug" btn-radio="'Y'">Yes</label>
-                                    <label class="btn btn-primary " ng-model="transaction.updateBug" btn-radio="'N'">No</label>
+                                <div class="btn-group">
+                                    <label class="btn btn-primary" ng-model="transaction.updateBug" uib-btn-radio="'Y'" uncheckable>Yes</label>
+                                    <label class="btn btn-primary" ng-model="transaction.updateBug" uib-btn-radio="'N'" uncheckable>No</label>
                                 </div>
                             </div>
                         </div>
@@ -55,9 +54,9 @@
                         <label for="breakonerror" class="col-sm-2 col-md-2 control-label">Run Junits</label>
                         <div class="col-md-7 col-sm-7 col-lg-7" id="runJunits">
                             <div class="input-group">
-                                <div class="radioBtn btn-group">
-                                    <label class="btn btn-primary not-active" ng-model="transaction.runJunits" btn-radio="'Y'">Yes</label>
-                                    <label class="btn btn-primary active" ng-model="transaction.runJunits" btn-radio="'N'">No</label>
+                                <div class="btn-group">
+                                    <label class="btn btn-primary" ng-model="transaction.runJunits" uib-btn-radio="'Y'" uncheckable>Yes</label>
+                                    <label class="btn btn-primary" ng-model="transaction.runJunits" uib-btn-radio="'N'" uncheckable>No</label>
                                 </div>
                             </div>
                         </div>
@@ -66,14 +65,22 @@
                         <label for="breakonerror" class="col-sm-2 col-md-2 control-label">Apply FPR</label>
                         <div class="col-md-7 col-sm-7 col-lg-7" id="applyFPR">
                             <div class="input-group">
-                                <div class="radioBtn btn-group">
-                                    <label class="btn btn-primary not-active" ng-model="transaction.applyFPR" btn-radio="'Y'">Yes</label>
-                                    <label class="btn btn-primary active" ng-model="transaction.applyFPR" btn-radio="'N'">No</label>
+                                <div class="btn-group">
+                                    <label class="btn btn-primary" ng-model="transaction.applyFPR" uib-btn-radio="'Y'" uncheckable>Yes</label>
+                                    <label class="btn btn-primary" ng-model="transaction.applyFPR" uib-btn-radio="'N'" uncheckable>No</label>
                                 </div>
                             </div>
                         </div>
                     </div>
-
+                    <div>
+                        <div class="form-group">
+                            <div class="col-md-4 col-sm-4 col-lg-4 control-label text-right" style="margin-left: 300px">
+                                <input type="submit" class="btn btn-success btn-circle" id="btn-submit" value="Submit Transaction" ng-disabled="(transactionSubmitform.transaction.$dirty && transactionSubmitform.transaction.$invalid) ||
+                                    (transactionSubmitform.email.$dirty && transactionSubmitform.email.$invalid) || (transactionSubmitform.dbstring.$dirty && transactionSubmitform.dbstring.$invalid) ">
+                            </div>
+                        </div>
+                    </div>
+                    <span style="color: red" ng-show="errorMsg">{{errorMsg}}</span>
                     <!--<div ng-show="transaction.validationStatus==='completed'">
                         <div class="panel panel-default" style="margin-left:80px">
                             <div class="panel-heading" style="font-weight: bold;color: blueviolet">Please Verify the details of the transaction Mentioned below and submit for PreMerge Scan</div>
@@ -92,27 +99,16 @@
                                     (transactionSubmitform.email.$dirty && transactionSubmitform.email.$invalid) || (transactionSubmitform.dbstring.$dirty && transactionSubmitform.dbstring.$invalid) ">
                             </div>
                         </div>
-                    </div>-->
-                      <div>
-                        <div class="form-group">
-                            <div class="col-md-4 col-sm-4 col-lg-4 control-label text-right" style="margin-left: 300px">
-                                <input type="submit" class="btn btn-success btn-circle" id="btn-submit" value="Submit Transaction" ng-disabled="(transactionSubmitform.transaction.$dirty && transactionSubmitform.transaction.$invalid) ||
-                                    (transactionSubmitform.email.$dirty && transactionSubmitform.email.$invalid) || (transactionSubmitform.dbstring.$dirty && transactionSubmitform.dbstring.$invalid) ">
-                            </div>
-                        </div>
                     </div>
-                    <!--<div ng-show="transaction.validationStatus==='inprocess'" class="panel panel-default" style="margin-left:80px">
+                    <div ng-show="transaction.validationStatus==='inprocess'" class="panel panel-default" style="margin-left:80px">
                             <div class="panel-heading" style="font-weight: bold;color: blueviolet">Please wait while we Verify the details of your transaction </div>
-                    </div>-->
-
-                    <!--<div ng-show="transaction.validationStatus==='notstarted'" class="form-group">
+                    </div>
+                    <div ng-show="transaction.validationStatus==='notstarted'" class="form-group">
                         <div class="col-md-4 col-sm-4 col-lg-4 control-label text-right" style="margin-left: 300px">
                             <input type="submit" class="btn btn-success btn-circle" id="btn-submit" value="Validate Transaction">
                         </div>
                     </div>-->
                     <!--   <span style="color:red" ng-show="transaction.isValid && !transaction.errorMsg.transactionError">Work In Progress..I am working on it right now soon you will be able to submit it</span> -->
-                    <span style="color: red" ng-show="transaction.errorMsg.transactionError">{{transaction.errorMsg.transactionError
-						}}</span>
                 </form>
             </div>
         </div>
