--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <script src="routes/app.js"></script>
 </head>
 <body ng-app="fusionApp">
-    <div class="container">
+    <div class="wrapper container" style="width:80%">
         <!-- HEADER -->
         <nav class="navbar navbar-inverse" style="background-color:black">
             <a class="navbar-brand" href="/" style="color:aliceblue">
