--- a/public/history/historyProgress.html
+++ b/public/history/historyProgress.html
@@ -1,3 +1,7 @@
-<div class="list-group" ng-init="getProgress()"> 
-    <embed ng-src="{{transactionOutput}}" style="width:100% ;height:700px"></embed>
+<div id="outer">
+    <div id="inner">
+        <div class="list-group" ng-init="getProgress()">
+            <embed ng-src="{{transactionOutput}}" style="width:100% ; height:800px"></embed>
+        </div>
+    </div>
 </div>
