--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 <body ng-app="fusionApp">
     <div class="wrapper container" style="width:80%">
         <!-- HEADER -->
-        <nav class="navbar navbar-inverse" style="background-color:black">
+        <nav class="navbar navbar-inverse" style="background-color:#337ab7">
             <a class="navbar-brand" href="/" style="color:aliceblue">
                 <span style="color:aliceblue;margin-top:-1px" class="glyphicon glyphicon-home"></span> Fusion PRC PreMerge
             </a>
