--- a/public/home/home.html
+++ b/public/home/home.html
@@ -5,13 +5,17 @@
                 <h4>Transaction Details</h4>
             </div>
             <div class="panel-body " style="padding-top: 30px">
-                <form ng-submit="submitTransaction()" id="transactionSubmitform" name="transactionSubmitform" class="form-horizontal "
-                    role="form">
+                <form ng-submit="submitTransaction()" id="transactionSubmitform" name="transactionSubmitform" class="form-horizontal " role="form">
                     <div class="form-group">
                         <label for="transaction-name" class="col-sm-2 col-md-2 control-label">Transaction</label>
                         <div class="col-sm-10 col-md-10 ">
-                            <input type="text" id="transactionname" class="form-control" name="transaction" ng-model="transaction.name" required placeholder="Enter Transaction Name"
-                                required style="cursor: auto">
+                            <input type="text" id="transactionname" class="form-control" name="transaction" ng-model="transaction.name" required placeholder="Enter Transaction Name" required style="cursor: auto">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="transaction-email" class="col-sm-2 col-md-2 control-label">Email </label>
+                        <div class="col-sm-10 col-md-10">
+                            <input id="transaction-email" class="form-control" required type="email" ng-model="transaction.email" name="email" placeholder="abc@oracle.com">
                         </div>
                     </div>
                     <div class="form-group">
@@ -31,12 +35,17 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="form-group">
-                        <label for="transaction-email" class="col-sm-2 col-md-2 control-label">Email </label>
-                        <div class="col-sm-10 col-md-10">
-                            <input id="transaction-email" class="form-control" required type="email" ng-model="transaction.email" name="email" placeholder="abc@oracle.com">
-
+                        <label for="allowDBOverride" class="col-sm-2 col-md-2 control-label">Allow DB Override
+                            <span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" title="Always Select yes if you don't want Junits to run on specific DB"></span>
+                        </label>
+                        <div class="col-md-7 col-sm-7 col-lg-7" id="allowDBOverride">
+                            <div class="input-group">
+                                <div class="btn-group">
+                                    <label class="btn btn-success" ng-model="transaction.allowDBOverride" uib-btn-radio="'Y'">Yes</label>
+                                    <label class="btn btn-success" ng-model="transaction.allowDBOverride" uib-btn-radio="'N'">No</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
