Update ProjectList Button

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -78,6 +78,9 @@
                                         <option value="6">Option 6</option>
                                     </select>
                                 </span>
+                                <span ng-hide="transaction.runJunits=='N'">
+                                    <button type="button" class="btn btn-default" ng-click="updateProjectList()" >Update Project List</button>
+                                </span>
                                 
                               
                             </div>
