--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="libs/bootstrap-ui/versioned-docs/2.0.1/ui-bootstrap-2.0.1-csp.css">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="bootstrap-multiselect.css">
     <!-- JS -->
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/angular/angular.min.js"></script>
@@ -17,7 +16,8 @@
     <script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="libs/ui-bootstrap-tpls-2.1.4.min.js"></script>
-    <script src="libs/bootstrap-multiselect.js"></script>
+    <script src="libs/angularjs-dropdown-multiselect.js"></script>
+    <script src="libs/lodash.js"></script>
     <!-- ANGULAR CUSTOM -->
     <script src="history/HistCtrl.js"></script>
     <script src="home/MainCtrl.js"></script>
