--- a/public/home/home.html
+++ b/public/home/home.html
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="breakonerror" class="col-sm-2 col-md-2 control-label">Run Junits</label>
+                        <label for="breakonerror" class="col-sm-2 col-md-2 control-label">Run Automated Unit Tests</label>
                         <div class="col-md-7 col-sm-7 col-lg-7" id="runJunits">
                             <div class="input-group">
                                 <div class="btn-group">
@@ -69,6 +69,7 @@
                                 </div>
                                 <span ng-hide="transaction.runJunits=='N'">
                                     <span ng-dropdown-multiselect="" options="projectList" selected-model="junitSelectedList" extra-settings="projectListConfigParams" checkboxes="true" translation-texts="projectListDisplayText"></span>
+                                    <!--<textarea style="height:350px; width:550px; overflow:scroll;">{{junitSelectedList }}</textarea >-->
                                 </span>
                                 <!--<span ng-hide="transaction.runJunits=='N'">
                                     <button type="button" class="btn btn-default" ng-click="updateProjectList()" >Update Project List</button>
