Removed commented code

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -69,8 +69,8 @@
                                 </div>
                                 <span ng-hide="transaction.runJunits=='N'">
                                     <span ng-dropdown-multiselect="" options="projectList" selected-model="junitSelectedList" extra-settings="projectListConfigParams" checkboxes="true" translation-texts="projectListDisplayText"></span>
-                                    <!--<textarea style="height:350px; width:550px; overflow:scroll;">{{junitSelectedList }}</textarea >-->
                                 </span>
+                                <!--Uncomment this code to enable update project List to run junits-->
                                 <!--<span ng-hide="transaction.runJunits=='N'">
                                     <button type="button" class="btn btn-default" ng-click="updateProjectList()" >Update Project List</button>
                                 </span>-->
