--- a/public/history/history.html
+++ b/public/history/history.html
@@ -1,5 +1,7 @@
+<!--
+  Created by jitender choudhary on 10/28/2016.
+ -->
 <div class="row" style="margin-right: -2px;margin-left: -1px; border: solid 1px black;border-radius: 4px;">
-    <!-- <div class="panel panel-primary"> -->
     <ul class="nav nav-tabs" style="background-color:#337ab7">
         <li><a data-toggle="tab" href="#active" ng-click="getTransactionList('Running')" style="color:white">Active Transactions</a></li>
         <li><a data-toggle="tab" href="#queued" ng-click="getTransactionList('Queued')" style="color:white">Queued</a></li>
