--- a/public/home/home.html
+++ b/public/home/home.html
@@ -1,3 +1,7 @@
+<!--
+  Created by jitender choudhary on 10/28/2016.
+ -->
+ 
 <div class="jumbotron text-center ">
     <div class="row" style="margin-left: -58px; margin-right: -58px; margin-top: -58px; margin-bottom: -68px">
         <div class="panel panel-primary">
