Updated ReadMe and shell configuration.

--- a/public/about/about.html
+++ b/public/about/about.html
@@ -1,3 +1,6 @@
+<!--
+  Created by jitender choudhary on 10/28/2016.
+ -->
 <div class="container-fluid bg-1 text-center">
     <h3 class="margin">You need to wait for this information , the development is still in progress</h3>
 </div>
