--- a/public/history/historyList.html
+++ b/public/history/historyList.html
@@ -63,11 +63,12 @@
                 <td ng-hide="currentTab=='queued'">{{ transaction.starttime | date: 'medium' }}</td>
                 <td ng-show="currentTab=='archived'">{{ transaction.endtime | date: 'medium' }}</td>
                 <td ng-show="currentTab=='archived'">{{ transaction.totalTimeSpend }}</td>
-                <td style="vertical-align: middle;" ng-show="currentTab=='archived' && (transaction.premergeOutput=='' || !transaction.premergeOutput)"><span class="label label-default">{{ transaction.premergeOutput }}</span></td>
+                <td style="vertical-align: middle;" ng-show="currentTab=='archived' && (transaction.premergeOutput=='' || !transaction.premergeOutput)"><span class="label label-default">Transaction Didn't Validated</span></td>
                 <td style="vertical-align: middle;" ng-show="currentTab=='archived' && transaction.premergeOutput=='Successful'"><a ng-href="{{transaction.transactionDetailedLocation}}" target="_blank" ><span class="label label-success">{{ transaction.premergeOutput }}</span></a></td>
                 <td style="vertical-align: middle;" ng-show="currentTab=='archived' && transaction.premergeOutput=='Failed'"><a ng-href="{{transaction.transactionDetailedLocation}}" target="_blank" ><span class="label label-danger">{{ transaction.premergeOutput }}</span></a></td>
                 <td style="vertical-align: middle;" ng-show="currentTab=='archived' && transaction.premergeOutput=='Warning'"><a ng-href="{{transaction.transactionDetailedLocation}}" target="_blank" ><span class="label label-warning">{{ transaction.premergeOutput }}</span></a></td>
                 <td style="vertical-align: middle;" ng-show="currentTab=='archived' && transaction.premergeOutput=='Transaction Does Not exist'"><span class="label label-info">{{ transaction.premergeOutput }}</span></td>
+                <td style="vertical-align: middle;" ng-show="currentTab=='archived' && transaction.premergeOutput=='Aborted'"><a ng-href="{{transaction.transactionDetailedLocation}}" target="_blank" ><span class="label label-info">{{ transaction.premergeOutput }}</span></a></td>
             </tr>
         </tbody>
     </table>
