--- a/public/home/home.html
+++ b/public/home/home.html
@@ -1,7 +1,7 @@
 <!--
   Created by jitender choudhary on 10/28/2016.
  -->
- 
+
 <div class="jumbotron text-center ">
     <div class="row" style="margin-left: -58px; margin-right: -58px; margin-top: -58px; margin-bottom: -68px">
         <div class="panel panel-primary">
@@ -13,7 +13,8 @@
                     <div class="form-group">
                         <label for="transaction-name" class="col-sm-2 col-md-2 control-label">Transaction</label>
                         <div class="col-sm-10 col-md-10 ">
-                            <input type="text" id="transactionname" class="form-control" name="transaction" ng-model="transaction.name" required placeholder="Enter Transaction Name" required style="cursor: auto">
+                            <input type="text" id="transactionname" class="form-control" name="transaction" ng-model="transaction.name" required placeholder="Enter Transaction Name"
+                                required style="cursor: auto">
                         </div>
                     </div>
                     <div class="form-group">
@@ -22,19 +23,35 @@
                             <input id="transaction-email" class="form-control" required type="email" ng-model="transaction.email" name="email" placeholder="abc@oracle.com">
                         </div>
                     </div>
+
                     <div class="form-group">
-                        <label for="dbstring1" class="col-sm-2 col-md-2 control-label">DB Details</label>
-                        <div class="row">
-                            <div class="col-lg-6" style="width: 81.33333%">
+                        <label for="transaction-family" class="col-sm-2 col-md-2 control-label">Family</label>
+                        <div id="productFamilyDetails">
+                            <div class="btn-group" style="float: left;margin-left: 15px;">
+                                <select style="width: 200px" class="btn btn-default dropdown-toggle" name="familySelect" id="familySelectID" ng-options="option.name for option in transaction.family.availableOptions track by option.id" ng-model="transaction.family.selectedOption"></select>
+                            </div>
+                            <div class="btn-group" style="float: left;margin-left: 15px;" ng-hide="transaction.family.selectedOption.id == 1">
+                                <select style="width: 200px" class="btn btn-default dropdown-toggle" name="productSelect" id="productSelectID" ng-options="option.name for option in transaction.family.selectedOption.productList track by option.id" ng-model="transaction.family.selectedOption.product"></select>
+                            </div>
+
+                            <div class="col-lg-6" style="float: right" ng-show="transaction.family.selectedOption.id == 2">
+                                <label for="dbstring1" class="col-sm-2 col-md-2 control-label">DB Details</label>
                                 <div class="input-group" id="dbstring1">
                                     <input type="text" class="form-control" id="dbstring" name="dbstring" ng-model="transaction.dbString" required placeholder="Something like.. username/password@slc09lwn.us.oracle.com:1522/jjikumar">
                                     <div class="input-group-btn">
                                         <button type="button" class="btn btn-default btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Select Seeded DB <span class="caret"></span>
-                                        </button>
+                                                </button>
                                         <ul class="dropdown-menu dropdown-menu-right">
                                             <li><a href="#" ng-click="changeDB(db)" ng-repeat="db in dbs" ng->{{db.alias}}</a></li>
                                         </ul>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6" style="float: right" ng-show="transaction.family.selectedOption.id != 2 && transaction.family.selectedOption.id !=1">
+                                <label for="dbstring1" class="col-sm-2 col-md-2 control-label">DB Details</label>
+                                <div class="input-group" id="dbstring1" style="width: 80%;float: right;">
+                                    <input type="text" style="border-radius: 4px" class="form-control" id="dbstring" name="dbstring" ng-model="transaction.dbString"
+                                        required placeholder="Something like.. username/password@slc09lwn.us.oracle.com:1522/jjikumar">
                                 </div>
                             </div>
                         </div>
@@ -93,10 +110,10 @@
                         <div ng-show='transactionSubmitform.$submitted && (transactionSubmitform.email.$dirty && transactionSubmitform.dbstring.$dirty && transactionSubmitform.transaction.$dirty)'
                             class="form-group">
                             <div class="alert alert-success" role="alert">Transaction Submitted Successfully</div>
-                        </div>
                     </div>
-                    <span style="color: red" ng-show="errorMsg">{{errorMsg}}</span>
-                    <!--<div ng-show="transaction.validationStatus==='completed'">
+            </div>
+            <span style="color: red" ng-show="errorMsg">{{errorMsg}}</span>
+            <!--<div ng-show="transaction.validationStatus==='completed'">
                         <div class="panel panel-default" style="margin-left:80px">
                             <div class="panel-heading" style="font-weight: bold;color: blueviolet">Please Verify the details of the transaction Mentioned below and submit for PreMerge Scan</div>
                             <table class="table">
@@ -123,9 +140,9 @@
                             <input type="submit" class="btn btn-success btn-circle" id="btn-submit" value="Validate Transaction">
                         </div>
                     </div>-->
-                    <!--   <span style="color:red" ng-show="transaction.isValid && !transaction.errorMsg.transactionError">Work In Progress..I am working on it right now soon you will be able to submit it</span> -->
-                </form>
-            </div>
+            <!--   <span style="color:red" ng-show="transaction.isValid && !transaction.errorMsg.transactionError">Work In Progress..I am working on it right now soon you will be able to submit it</span> -->
+            </form>
         </div>
     </div>
+</div>
 </div>
