--- a/public/home/home.html
+++ b/public/home/home.html
@@ -28,14 +28,14 @@
                         <label for="transaction-family" class="col-sm-2 col-md-2 control-label">Family</label>
                         <div id="productFamilyDetails">
                             <div class="btn-group" style="float: left;margin-left: 15px;">
-                                <select style="width: 200px" class="btn btn-default dropdown-toggle" name="familySelect" id="familySelectID" ng-options="option.name for option in transaction.family.availableOptions track by option.id" ng-model="transaction.family.selectedOption"></select>
+                                <select style="width: 180px" class="btn btn-default dropdown-toggle" name="familySelect" id="familySelectID" ng-options="option.name for option in transaction.family.availableOptions track by option.id" ng-model="transaction.family.selectedOption"></select>
                             </div>
                             <div class="btn-group" style="float: left;margin-left: 15px;" ng-hide="transaction.family.selectedOption.id == 1">
-                                <select style="width: 200px" class="btn btn-default dropdown-toggle" name="productSelect" id="productSelectID" ng-options="option.name for option in transaction.family.selectedOption.productList track by option.id" ng-model="transaction.family.selectedOption.product"></select>
+                                <select style="width: 180px" class="btn btn-default dropdown-toggle" name="productSelect" id="productSelectID" ng-options="option.name for option in transaction.family.selectedOption.productList track by option.id" ng-model="transaction.family.selectedOption.product"></select>
                             </div>
 
-                            <div class="col-lg-6" style="float: right" ng-show="transaction.family.selectedOption.id == 2">
-                                <label for="dbstring1" class="col-sm-2 col-md-2 control-label">DB Details</label>
+                            <div class="col-lg-6" style="float: right" ng-show="transaction.family.selectedOption.id == 2 && transaction.runJunits=='Y'">
+                                <label for="dbstring1" class="col-sm-2 col-md-2 control-label">DB</label>
                                 <div class="input-group" id="dbstring1">
                                     <input type="text" class="form-control" id="dbstring" name="dbstring" ng-model="transaction.dbString" required placeholder="Something like.. username/password@slc09lwn.us.oracle.com:1522/jjikumar">
                                     <div class="input-group-btn">
@@ -47,8 +47,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6" style="float: right" ng-show="transaction.family.selectedOption.id != 2 && transaction.family.selectedOption.id !=1">
-                                <label for="dbstring1" class="col-sm-2 col-md-2 control-label">DB Details</label>
+                            <div class="col-lg-6" style="float: right" ng-show="transaction.family.selectedOption.id != 2 && transaction.family.selectedOption.id !=1 && transaction.runJunits=='Y'">
+                                <label for="dbstring1" class="col-sm-2 col-md-2 control-label">DB</label>
                                 <div class="input-group" id="dbstring1" style="width: 80%;float: right;">
                                     <input type="text" style="border-radius: 4px" class="form-control" id="dbstring" name="dbstring" ng-model="transaction.dbString"
                                         required placeholder="Something like.. username/password@slc09lwn.us.oracle.com:1522/jjikumar">
@@ -88,7 +88,7 @@
                                     <label class="btn btn-success" ng-model="transaction.runJunits" uib-btn-radio="'Y'">Yes</label>
                                     <label class="btn btn-success" ng-model="transaction.runJunits" uib-btn-radio="'N'">No</label>
                                 </div>
-                                <span ng-hide="transaction.runJunits=='N'">
+                                <span ng-hide="transaction.runJunits=='N' || transaction.family.selectedOption.name=='Select Family'">
                                     <span ng-dropdown-multiselect="" options="projectList" selected-model="junitSelectedList" extra-settings="projectListConfigParams" checkboxes="true" translation-texts="projectListDisplayText"></span>
                                 </span>
                                 <!--Uncomment this code to enable update project List to run junits-->
