Added Favicon and UI Changes

--- a/public/history/historyList.html
+++ b/public/history/historyList.html
@@ -4,7 +4,7 @@
 <form>
     <div class="form-group">
         <div class="input-group">
-            <div class="input-group-addon"><i class="glyphicon glyphicon-search"></i></div>
+            <div class="input-group-addon"><em class="glyphicon glyphicon-search"></em></div>
             <input type="text" class="form-control" placeholder="Search Transactions.." ng-model="search">
         </div>
     </div>
